--- a/CMPUT301F22T21_Project/app/src/main/AndroidManifest.xml
+++ b/CMPUT301F22T21_Project/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.myhw">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,8 +13,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CMPUT301F22T21_Project"
+        android:theme="@style/Theme.MyHW"
         tools:targetApi="31">
+        <activity
+            android:name=".SelectRecipeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".recipes.RecipesDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Ingredient.AddIngredientActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -20,11 +32,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
         </activity>
+        <activity android:name=".recipes.AddRecipeActivity" />
+        <activity android:name=".Ingredient.SelectIngredientActivity" />
+        <activity android:name=".recipes.SelectRecipeActivity" />
     </application>
 
 </manifest>
