--- a/CMPUT301F22T21_Project/settings.gradle
+++ b/CMPUT301F22T21_Project/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "CMPUT301F22T21_Project"
+rootProject.name = "MyHW"
 include ':app'
