--- a/CMPUT301F22T21_Project/app/build.gradle
+++ b/CMPUT301F22T21_Project/app/build.gradle
@@ -51,4 +51,11 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-storage:8.0.1'
     implementation 'com.google.firebase:firebase-firestore'
     annotationProcessor('com.github.bumptech.glide:compiler:4.13.2')
+
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 }
