--- a/CMPUT301F22T21_Project/app/src/main/AndroidManifest.xml
+++ b/CMPUT301F22T21_Project/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.myhw">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +16,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyHW"
         tools:targetApi="31">
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.myhw"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
             android:name=".recipes.RecipesDetailActivity"
             android:exported="false" />
