--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,8 +21,8 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: chmod +x CMPUT301F22T21_Project/gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./CMPUT301F22T21_Project/gradlew build
     - name: Run Unit Tests
-      run: ./gradlew test
+      run: ./CMPUT301F22T21_Project/gradlew test
